# grocery-api

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yaml
migrations/2020-11-21-014735_grocery_buddy/: down.sql  up.sql
src/: account.rs  main.rs  schema.rs
