[package]
name = "grocery-api"
version = "0.1.0"
authors = ["Jack Malcom <jackxmalcom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0.117"
diesel = { version = "1.4.5", features = ["postgres"] }

[dependencies.serde_derive]
version = "1.0.117"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "diesel_postgres_pool"]